fix gradient not covering full screen and misc

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,12 +56,13 @@ main,
     height: 100%;
 }
 
-body {
+html {
     font-family: 'Roboto', sans-serif;
     color: var(--main-text-color);
     background-image: -webkit-gradient(linear, left top, left bottom, from(var(--main-color-dark)), to(var(--main-color-dark-lighter)));
     background-image: linear-gradient(var(--main-color-dark), var(--main-color-dark-lighter));
     background-size: cover;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
 }
@@ -195,15 +196,14 @@ header>nav>a:hover {
     margin-bottom: .5em;
 }
 
-header,
-footer {
+header {
     position: fixed;
     left: 0;
     right: 0;
+    top: 0;
 }
 
 header {
-    top: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -218,7 +218,6 @@ header {
 
 footer {
     background-color: var(--main-color-dark);
-    bottom: 0;
     font-size: 18px;
 }
 
